--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -733,7 +733,7 @@
     <Content Include="Res\objavljeno.gif">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="packages.config" />
+    <None Include="packages.config" />
     <Content Include="Account\Web.config" />
     <Content Include="Account\Account.Master" />
     <Content Include="adm\fonts\glyphicons-halflings-regular.eot">
@@ -770,15 +770,15 @@
     </Content>
     <Content Include="adm\css\bootstrap.css.map" />
     <Content Include="JavaScript\jquery-2.1.3.min.map" />
-    <Content Include="One.Net.deploy.nuspec" />
-    <Content Include="gitignore.template" />
-    <Content Include="One.Net.library.nuspec" />
+    <None Include="One.Net.deploy.nuspec" />
+    <None Include="gitignore.template" />
+    <None Include="One.Net.library.nuspec" />
     <None Include="One.Net.nuspec">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="NLog.config">
+    <None Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </None>
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
