changed default web.config for proper custom project transformation

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -23,16 +23,28 @@
     </rules>
 
   </nlog> -->
-  <appSettings file="LocalAppSettings.config" />
-  <connectionStrings configSource="LocalConnectionStrings.config" />
-  <!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.5" />
-      </system.Web>
-  -->
+  <appSettings>
+    <add key="vs:EnableBrowserLink" value="false" />
+    <add key="webpages:Version" value="3.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="WebSiteId" value="1" />
+    <add key="PublishRoleMapping" value="publisher" />
+    <add key="PublishFlag" value="false" />
+    <add key="EnableDiskCache" value="false" />
+    <add key="CacheDuration" value="3600" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <add key="Cache.CacheToUse" value="netmemory" />
+    <add key="MailChimpApiKey" value="" />
+    <add key="MailChimpListId" value="" />
+  </appSettings>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="server=kths5c9mo5.database.windows.net;uid=universal;pwd=Identity12345;database=universal_identity;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="MsSqlConnectionString" connectionString="Pooling=true;" />
+    <add name="Bamboo" connectionString="Pooling=true;" />
+    <add name="MsSqlConnectionStringCustom" connectionString="Pooling=true;" />
+  </connectionStrings>
   <system.web>
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="sl-SI" />
     <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
