added epub file type to default mapping

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -112,6 +112,7 @@
       <add path="*.ttf" name="ttf" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.woff" name="woff" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.woff2" name="woff2" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
+      <add path="*.epub" name="epub" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.mp3" name="mp3" verb="GET,HEAD,POST" type="One.Net.BLL.Paths.DownloadHandler" />
     </handlers>
     <staticContent>
