controls added so that we don't need to import them in each and every aspx/ascx

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -51,6 +51,9 @@
       <namespaces>
         <add namespace="Microsoft.AspNet.Identity" />
       </namespaces>
+      <controls>
+        <add tagPrefix="Controls"  namespace="OneMainWeb.Controls" assembly="OneMainWeb"/>
+      </controls>
     </pages>
     <sessionState timeout="60" />
     <httpRuntime requestValidationMode="2.0" maxRequestLength="24576" targetFramework="4.5" />
