added more namespaces to default in web.config

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -50,6 +50,7 @@
     <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
       <namespaces>
         <add namespace="Microsoft.AspNet.Identity" />
+        <add namespace="One.Net.BLL" />
       </namespaces>
       <controls>
         <add tagPrefix="Controls"  namespace="OneMainWeb.Controls" assembly="OneMainWeb"/>
