--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -29,7 +29,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebSiteId" value="1" />
+    <add key="WebSiteId" value="2" />
     <add key="PublishRoleMapping" value="publisher" />
     <add key="PublishFlag" value="false" />
     <add key="EnableDiskCache" value="false" />
@@ -40,13 +40,13 @@
     <add key="MailChimpListId" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="server=kths5c9mo5.database.windows.net;uid=universal;pwd=Identity12345;database=universal_identity;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionString" connectionString="Pooling=true;" />
-    <add name="Bamboo" connectionString="Pooling=true;" />
-    <add name="MsSqlConnectionStringCustom" connectionString="Pooling=true;" />
+    <add name="DefaultConnection" connectionString="server=KIT.renderspace.si;uid=universal;pwd=Identity12345;database=universal_identity_2;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=planica;pwd=planica;database=planica_temp;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="Bamboo" connectionString="Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="MsSqlConnectionStringCustom" connectionString="Pooling=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="sl-SI" />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="en-US" />
     <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
       <namespaces>
         <add namespace="Microsoft.AspNet.Identity" />
