--- a/OneMainWeb/One.Net.nuspec
+++ b/OneMainWeb/One.Net.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>One.NET</id>
-        <version>3.0.14</version>
+        <version>3.0.15</version>
         <title>One.NET</title>
         <authors>samof</authors>
         <owners>Renderspace d.o.o.</owners>
@@ -51,6 +51,7 @@
       <file src="adm\**.woff2" target="content\adm" />
       <file src="adm\**.png" target="content\adm" />
       <file src="adm\**.css" target="content\adm" />
+      <file src="adm\**.ashx" target="content\adm" />
 
       <file src="AdminControls\**.ascx" target="content\AdminControls" />
       <file src="CommonModules\**.ascx" target="content\CommonModules" />
