experimentally changed default page to articles

--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -5,7 +5,7 @@
     <defaultDocument>
       <files>
         <clear />
-        <add value="Structure.aspx" />
+        <add value="Articles.aspx" />
       </files>
     </defaultDocument>
   </system.webServer>
