back to cms goes to structure

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -21,7 +21,6 @@
     <rules>
       <logger name="*" minlevel="Info" writeTo="asyncFile" />
     </rules>
-
   </nlog> -->
   <appSettings>
     <add key="vs:EnableBrowserLink" value="false" />
@@ -29,7 +28,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebSiteId" value="2" />
+    <add key="WebSiteId" value="1" />
     <add key="PublishRoleMapping" value="publisher" />
     <add key="PublishFlag" value="false" />
     <add key="EnableDiskCache" value="false" />
@@ -40,10 +39,10 @@
     <add key="MailChimpListId" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="server=KIT.renderspace.si;uid=universal;pwd=Identity12345;database=universal_identity_2;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=planica;pwd=planica;database=planica_temp;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="Bamboo" connectionString="Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionStringCustom" connectionString="Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="server=kths5c9mo5.database.windows.net;uid=universal;pwd=Identity12345;database=universal_identity;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="MsSqlConnectionString" connectionString="Data Source=kths5c9mo5.database.windows.net;User ID=zrsz;Password=Uhx9aDwCn5mVJb6Z!;Initial Catalog=zrsz;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="Bamboo" connectionString="server=mongol.cloudapp.net;uid=zrsz;pwd=zrsz;database=OneNetCustom;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="MsSqlConnectionStringCustom" connectionString="server=mongol.cloudapp.net;uid=zrsz;pwd=zrsz;database=OneNetCustom;Pooling=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="en-US" />
