--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -117,6 +117,9 @@
       <add path="*.woff2" name="woff2" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.epub" name="epub" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.mp3" name="mp3" verb="GET,HEAD,POST" type="One.Net.BLL.Paths.DownloadHandler" />
+      <add path="*.txt" name="txt" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
+      <add path="*.log" name="log" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
+      <add path="*.epub" name="epub2" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
     </handlers>
     <staticContent>
       <clientCache cacheControlMaxAge="7.00:00:00" cacheControlMode="UseMaxAge" />
