--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -45,7 +45,7 @@
     <add name="MsSqlConnectionStringCustom" connectionString="server=mongol.cloudapp.net;uid=zrsz;pwd=zrsz;database=OneNetCustom;Pooling=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="en-US" />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="sl-SI" />
     <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
       <namespaces>
         <add namespace="Microsoft.AspNet.Identity" />
