--- a/OneMainWeb/Web.prirocnik.renderspace.net.config
+++ b/OneMainWeb/Web.prirocnik.renderspace.net.config
@@ -16,6 +16,14 @@
 
   </appSettings>
 
+  <system.web>
+    <globalization  xdt:Transform="Replace" fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="sl-SI" />
+
+    <customErrors defaultRedirect="/site_specific/500.html" mode="Off" xdt:Transform="Replace">
+    </customErrors>
+    
+  </system.web>
+
   <system.webServer>
     <httpErrors xdt:Transform="Remove" />
   </system.webServer>
