add custom conn string

--- a/OneMainWeb/Web.prirocnik.renderspace.net.config
+++ b/OneMainWeb/Web.prirocnik.renderspace.net.config
@@ -4,8 +4,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="server=kths5c9mo5.database.windows.net;uid=universal;pwd=Identity12345;database=universal_identity;Pooling=true;" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     <add name="MsSqlConnectionString" connectionString="server=KIT;uid=onenetdemo;pwd=onenetdemo;database=OneNetDemo;Pooling=true;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    <add name="MsSqlConnectionStringCustom" connectionString="Pooling=true;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    <add name="Bamboo" connectionString="Pooling=true;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>   
+    <add name="MsSqlConnectionStringCustom" connectionString="server=KIT;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    <add name="Bamboo" connectionString="server=KIT;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
   <nlog xdt:Transform="Remove" />
