--- a/OneMainWeb/Web.prirocnik.renderspace.net.config
+++ b/OneMainWeb/Web.prirocnik.renderspace.net.config
@@ -2,7 +2,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="server=kths5c9mo5.database.windows.net;uid=universal;pwd=Identity12345;database=universal_identity;Pooling=true;" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    <add name="DefaultConnection" connectionString="server=KIT.renderspace.si;uid=universal;pwd=Identity12345;database=universal_identity_2;Pooling=true;" providerName="System.Data.SqlClient" />
     <add name="MsSqlConnectionString" connectionString="server=KIT;uid=onenetdemo;pwd=onenetdemo;database=OneNetDemo;Pooling=true;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     <add name="MsSqlConnectionStringCustom" connectionString="server=KIT;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     <add name="Bamboo" connectionString="server=KIT;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
