--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -398,6 +398,7 @@
       <DependentUpon>Blank.ascx</DependentUpon>
     </Compile>
     <Compile Include="Controls\BreadCrumb.cs" />
+    <Compile Include="Controls\CurrentLanguage.cs" />
     <Compile Include="Controls\GetMeaning.cs" />
     <Compile Include="Controls\JavascriptVars.cs" />
     <Compile Include="Controls\LanguageSelector.cs" />
