--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -28,7 +28,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebSiteId" value="1" />
+    <add key="WebSiteId" value="3" />
     <add key="PublishRoleMapping" value="publisher" />
     <add key="PublishFlag" value="false" />
     <add key="EnableDiskCache" value="false" />
@@ -39,10 +39,10 @@
     <add key="MailChimpListId" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="server=kths5c9mo5.database.windows.net;uid=universal;pwd=Identity12345;database=universal_identity;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionString" connectionString="Data Source=kths5c9mo5.database.windows.net;User ID=zrsz;Password=Uhx9aDwCn5mVJb6Z!;Initial Catalog=zrsz;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="Bamboo" connectionString="server=mongol.cloudapp.net;uid=zrsz;pwd=zrsz;database=OneNetCustom;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionStringCustom" connectionString="server=mongol.cloudapp.net;uid=zrsz;pwd=zrsz;database=OneNetCustom;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="server=KIT.renderspace.si;uid=universal;pwd=Identity12345;database=universal_identity_2;Pooling=true;" providerName="System.Data.SqlClient" />
+    <add name="MsSqlConnectionString" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=OneNetDemo;Pooling=true;" />
+    <add name="MsSqlConnectionStringCustom" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" />
+    <add name="Bamboo" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" />       
   </connectionStrings>
   <system.web>
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="sl-SI" />
