custom error 404 on all errors

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -57,7 +57,9 @@
     </pages>
     <sessionState timeout="60" />
     <httpRuntime requestValidationMode="2.0" maxRequestLength="24576" targetFramework="4.5" />
-    <customErrors mode="RemoteOnly" defaultRedirect="/site_specific/500.html" />
+    <customErrors mode="RemoteOnly" defaultRedirect="/site_specific/500.html">
+      <error statusCode="404" redirect="/site_specific/404.html"/>
+    </customErrors>
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="None" />
     <!-- for authorized access to all preview
