--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -28,7 +28,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebSiteId" value="3" />
+    <add key="WebSiteId" value="1" />
     <add key="PublishRoleMapping" value="publisher" />
     <add key="PublishFlag" value="false" />
     <add key="EnableDiskCache" value="false" />
@@ -40,9 +40,9 @@
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="server=KIT.renderspace.si;uid=universal;pwd=Identity12345;database=universal_identity_2;Pooling=true;" providerName="System.Data.SqlClient" />
-    <add name="MsSqlConnectionString" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=OneNetDemo;Pooling=true;" />
-    <add name="MsSqlConnectionStringCustom" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" />
-    <add name="Bamboo" connectionString="server=KIT.renderspace.si;uid=onenetdemo;pwd=onenetdemo;database=one_net_custom;Pooling=true;" />       
+    <add name="MsSqlConnectionString" connectionString="server=KIT.renderspace.si;uid=termedobrna;pwd=m123456;database=termedobrna;Pooling=true;" />
+    <add name="MsSqlConnectionStringCustom" connectionString="server=KIT.renderspace.si;uid=termedobrna;pwd=m123456;database=termedobrna_custom;Pooling=true;" />
+    <add name="Bamboo" connectionString="server=KIT.renderspace.si;uid=termedobrna;pwd=m123456;database=termedobrna_custom;Pooling=true;" />
   </connectionStrings>
   <system.web>
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="sl-SI" />
@@ -58,7 +58,7 @@
     <sessionState timeout="60" />
     <httpRuntime requestValidationMode="2.0" maxRequestLength="24576" targetFramework="4.5" />
     <customErrors mode="RemoteOnly" defaultRedirect="/site_specific/500.html">
-      <error statusCode="404" redirect="/site_specific/404.html"/>
+      <error statusCode="404" redirect="/site_specific/404.html" />
     </customErrors>
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="None" />
