--- a/OneMainWeb/One.Net.nuspec
+++ b/OneMainWeb/One.Net.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>One.NET</id>
-        <version>3.0.56</version>
+        <version>3.0.57</version>
         <title>One.NET</title>
         <authors>samof</authors>
         <owners>Renderspace d.o.o.</owners>
@@ -61,10 +61,7 @@
       <file src="App_Browsers\one.browser" target="content\App_Browsers\one.browser" />
       <file src="App_Data\blank.txt" target="content\App_Data\blank.txt" />
 
-      <file src="site_specific\ck.css" target="content\site_specific\ck.css" />
-      <file src="site_specific\ckstyles.js" target="content\site_specific\ckstyles.js" />
-	  <file src="site_specific\custom_modules\**.ascx" target="content\site_specific\custom_modules" />
-      
+      <file src="SiteDefault\**.*" target="content\SiteDefault" />
 
       <file src="JavaScript\**.js" target="content\JavaScript" />
       <file src="JavaScript\**.swf" target="content\JavaScript" />
