--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -63,10 +63,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="forms, Version=3.1.0.3, Culture=en-US, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Forms.3.1.0.3\lib\net45\forms.dll</HintPath>
-    </Reference>
     <Reference Include="Kentor.OwinCookieSaver, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Kentor.OwinCookieSaver.1.0.2\lib\net45\Kentor.OwinCookieSaver.dll</HintPath>
@@ -471,7 +467,6 @@
     <Content Include="adm\fonts\glyphicons-halflings-regular.svg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="adm\Forms.aspx" />
     <Content Include="adm\images\drag.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -747,7 +742,6 @@
     <Content Include="Res\objavljeno.gif">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="adm\ExcelExport.ashx" />
     <None Include="OneMainWeb.wpp.targets" />
     <None Include="packages.config" />
     <Content Include="Account\Web.config" />
@@ -798,8 +792,8 @@
     <Content Include="SiteDefault\aspx_templates\demo.aspx" />
     <Content Include="SiteDefault\ck.css" />
     <Content Include="SiteDefault\ckstyles.js" />
-    <Content Include="site_specific\custom_modules\Form.ascx" />
-    <Content Include="site_specific\custom_modules\FormSelector.ascx" />
+    <Content Include="CommonModules\Form.ascx" />
+    <Content Include="CommonModules\FormSelector.ascx" />
     <Content Include="SiteDefault\_css\default.html" />
     <Content Include="SiteDefault\_js\default.html" />
     <Content Include="SiteDefault\_js\Forms.js" />
