--- a/.nuget/NuGet.Config
+++ b/.nuget/NuGet.Config
@@ -3,4 +3,16 @@
   <solution>
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
+  <packageRestore>
+    <add key="enabled" value="True" />
+    <add key="automatic" value="True" />
+  </packageRestore>
+	<packageSources>
+		<add key="nuget.org" value="https://www.nuget.org/api/v2/" 
+    <add key="OneNet" value="http://nuget.t.renderspace.net/nuget" />
+	</packageSources>
+	<activePackageSources>
+		<add key="OneNet" value="http://nuget.t.renderspace.net/nuget" />
+	</activePackageSource>
 </configuration>
+
