Unused reference system.web.http removed.

--- a/.nuget/NuGet.Config
+++ b/.nuget/NuGet.Config
@@ -8,11 +8,8 @@
     <add key="automatic" value="True" />
   </packageRestore>
 	<packageSources>
-		<add key="nuget.org" value="https://www.nuget.org/api/v2/" 
-    <add key="OneNet" value="http://nuget.t.renderspace.net/nuget" />
-	</packageSources>
-	<activePackageSources>
+		<add key="nuget.org" value="https://www.nuget.org/api/v2/" />
 		<add key="OneNet" value="http://nuget.t.renderspace.net/nuget" />
-	</activePackageSource>
+	</packageSources>
 </configuration>
 
