--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -162,7 +162,6 @@
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Extensions.Design" />
-    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
@@ -932,7 +931,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>1532</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
@@ -947,8 +946,9 @@
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
-	<PostBuildEvent></PostBuildEvent>
-	<!--
+    <PostBuildEvent>
+    </PostBuildEvent>
+    <!--
     <PostBuildEvent>"$(SolutionDir).nuget\nuget.exe" pack "$(SolutionDir)OneMainWeb\One.Net.nuspec" -OutputDirectory $(SolutionDir)
 "$(SolutionDir).nuget\nuget.exe" pack "$(SolutionDir)OneMainWeb\One.Net.library.nuspec" -OutputDirectory $(SolutionDir)</PostBuildEvent>
 	-->
